залив после ошибки начало меню

--- a/index.html
+++ b/index.html
@@ -5,10 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Golden</title>
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  
+
 </head>
 <body>
-  
+    <header class="header">
+      <div class="navbar">
+        <div class="conteiner">
+            <div class="logo logo__heder">
+              <img src="../img/Logo-Treehouse.png" alt="Treehouse">
+            </div>
+            <button class="menu-button">
+              <span class="menu-button__line"></span>
+              <span class="menu-button__line"></span>
+              <span class="menu-button__line"></span>
+            </button>
+            <ul class="navbar-item">
+              <li class="navbar__items"><a href="#" class="navbar__items__a">Home</a></li>
+              <li class="navbar__items"><a href="#" class="navbar__items__a">Services</a></li>
+              <li class="navbar__items"><a href="#" class="navbar__items__a">Portfolio</a></li>
+              <li class="navbar__items"><a href="#" class="navbar__items__a">About</a></li>
+              <li class="navbar__items"><a href="#" class="navbar__items__a">Contact</a></li>
+            </ul>
+          
+        </div>
+        <!-- /.conteiner -->
+      </div>
+      <!-- /.navbar -->
+      <div class="hero"></div>
+      <!-- /.hero -->
+    </header>
+    <!-- /.header -->
 </body>
 </html>
