Продолжение настройки меню

--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
 
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="Home">
       <div class="navbar">
         <div class="conteiner">
-            <div class="logo logo__heder">
-              <img src="../img/Logo-Treehouse.png" alt="Treehouse">
+            <div class="navbar-wrap">
+              <div class="logo logo__header">
+                <img src="../img/Logo-Treehouse.png" alt="Treehouse">
+              </div>
+              <button class="menu-button navbar__menu-button">
+                <span class="menu-button__line"></span>
+                <span class="menu-button__line"></span>
+                <span class="menu-button__line"></span>
+              </button>
+              <ul class="navbar-item">
+                <li class="navbar__items"><a href="#Home" class="navbar__items__a">Home</a></li>
+                <li class="navbar__items"><a href="#Services" class="navbar__items__a">Services</a></li>
+                <li class="navbar__items"><a href="#Portfolio" class="navbar__items__a">Portfolio</a></li>
+                <li class="navbar__items"><a href="#About" class="navbar__items__a">About</a></li>
+                <li class="navbar__items"><a href="#Contact" class="navbar__items__a">Contact</a></li>
+              </ul>
             </div>
-            <button class="menu-button">
-              <span class="menu-button__line"></span>
-              <span class="menu-button__line"></span>
-              <span class="menu-button__line"></span>
-            </button>
-            <ul class="navbar-item">
-              <li class="navbar__items"><a href="#" class="navbar__items__a">Home</a></li>
-              <li class="navbar__items"><a href="#" class="navbar__items__a">Services</a></li>
-              <li class="navbar__items"><a href="#" class="navbar__items__a">Portfolio</a></li>
-              <li class="navbar__items"><a href="#" class="navbar__items__a">About</a></li>
-              <li class="navbar__items"><a href="#" class="navbar__items__a">Contact</a></li>
-            </ul>
+            <!-- /.navbar-wrap -->
           
         </div>
         <!-- /.conteiner -->
